# seans-arcade

./: .gitignore  Cargo.toml  Dockerfile.relay  README.md  setup-assets.sh
crates/arcade/: Cargo.toml  build.rs
crates/arcade-ops/: Cargo.toml
crates/arcade-ops/src/: main.rs  s3.rs
crates/arcade/src/: assets.rs  chat.rs  config.rs  fraktur.rs  main.rs  net.rs  version.rs
docs/: TODO.md  architectural-rules-in-ecs.md  architecture-decisions.md  avatar-control-and-game-feel.md  decisions.md  design-philosophy.md  design-topics-to-explore.md  discovered-contract.md  distribution.md  emergent-gameplay-and-progression.md  game-engine-anatomy.md  gilrs-dual-gamepad-bug.md  meaningful-choice-analysis.md  network-architecture.md  network-multiplayer.md  network-operations.md  non-programming-skills.md  pain-before-relief.md  procedural-vs-authored-design.md  progression-and-difficulty-design.md  project-overview.md  project-setup.md  reference-games.md  seans-arcade-plan.md  zelda-case-study.md
examples/: animated_sphere_1.rs  animated_sphere_2.rs  asset_browser.rs  bouncing_balls.rs  chat_prototype.rs  color_constructors.rs  dashboard.rs  dashboard_gilrs_debug.rs  dual_input_display.rs  enums.rs  error_handling.rs  flex_direction.rs  flex_nesting.rs  flex_sizing.rs  flex_wrap.rs  fraktur_hello.rs  function_wrapping.rs  generate_sounds.rs  grid_alignment.rs  grid_nesting.rs  grid_placement.rs  grid_template.rs  hello_bevy.rs  hello_rust.rs  input_display.rs  layout_lab.rs  neon_pong.rs  ownership.rs  pad_tables.rs  pong.rs  pong2.rs  screen_transition.rs  sprite_discover.rs  sprite_export.rs  sprite_grid.rs  sprite_walk.rs  stress_balls.rs  tile_image.rs  traits.rs  tree_browser.rs  (+2 more)
infra/: github-oidc.tf  index.html.tftpl  main.tf  outputs.tf  relay.tf
scripts/: run-arcade-cli.cmd  run-arcade-cli.sh  run-arcade-ops.cmd  run-arcade-ops.sh  run-arcade.cmd  run-arcade.sh  run-relay.cmd  run-relay.sh  (+2 more)
(+80 files in other folders)
