[workspace]
members = []

[package]
name = "bevy-prototyping"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["wav"] }

# Enable fast compiles for development (Bevy recommendation)
# Disable when profiling or benchmarking
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
