[workspace]
members = [
    "crates/protocol",
    "crates/arcade",
    "crates/relay",
    "crates/arcade-cli",
    "prototypes/relay",
    "prototypes/net_pong",
]

[package]
name = "bevy-prototyping"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["wav"] }
bevy_egui = "0.39.1"
glob = "0.3"
image = "0.25"
noise = "0.9"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zip = "2"

# Enable fast compiles for development (Bevy recommendation)
# Disable when profiling or benchmarking
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
