[package]
name = "arcade-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-config = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
chrono = "0.4"
base64 = "0.22"
postcard = { version = "1", features = ["alloc"] }
ureq = "3"
