[package]
name = "arcade"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["debug"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-appender = "0.2"
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
toml = "0.8"
dirs = "6"
rand = "0.10.0"
arboard = "3.6"
